write user controller and unit tests for the usercontroller
The most significant changes to the project include the integration of unit testing, updates to project dependencies, and the implementation of CRUD operations for user management. These enhancements aim to improve the project's maintainability, compatibility, and functionality.

1. **Integration of Unit Testing**: The project now includes a unit test project (`UnitTestProject1`) and references to MSTest frameworks (`Microsoft.VisualStudio.TestPlatform.TestFramework` and its extensions), enabling the development and execution of unit tests. This is further supported by the addition of a `UserControllerTests.cs` file, which contains tests for the CRUD operations in the `UserController`.
   - Added references for testing: `Microsoft.VisualStudio.TestPlatform.TestFramework`, `Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions`
   - Added MSTest.TestFramework package in `packages.config`
   - Introduced `UnitTestProject1` to the solution
   - Created `UserControllerTests.cs` for testing CRUD operations

2. **Updates to Project Dependencies**: The project's dependencies have been updated to support advanced compilation features and to ensure compatibility with Visual Studio Version 17. This includes adding and removing references, updating the solution file, and adjusting the `Web.config` for `WebGrease`.
   - Added reference: `Microsoft.CodeDom.Providers.DotNetCompilerPlatform`
   - Removed duplicate reference to `Microsoft.CodeDom.Providers.DotNetCompilerPlatform`
   - Updated Visual Studio solution file for compatibility with Version 17
   - Modified `Web.config` for `WebGrease` version redirect

3. **Implementation of CRUD Operations**: The `UserController` now fully supports Create, Read, Update, and Delete operations, marking a significant enhancement in the project's functionality for managing user data.
   - Implemented CRUD operations in `UserController.cs`

Additionally, the project now inclu

--- a/CRUD application 2.csproj
+++ b/CRUD application 2.csproj
@@ -45,7 +45,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>packages\MSTest.TestFramework.2.2.10\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>packages\MSTest.TestFramework.2.2.10\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -112,11 +121,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform">
-      <HintPath>packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
@@ -126,6 +130,7 @@
     </Compile>
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Controllers\UserControllerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -138,6 +143,7 @@
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="deploy.json" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
