--- a/.github/cy.yml
+++ b/.github/cy.yml
@@ -2,9 +2,9 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ new-branch-name ]
   pull_request:
-    branches: [ main ]
+    branches: [ new-branch-name ]
 
 jobs:
   build:
