--- a/CRUD application 2.csproj
+++ b/CRUD application 2.csproj
@@ -144,6 +144,8 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="deploy.json" />
+    <Content Include=".github\cy.yml" />
+    <Content Include="Readmi.md" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
