--- a/.github/cy.yml
+++ b/.github/cy.yml
@@ -2,9 +2,9 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ new-branch-name ]
+    branches: new-branch-name
   pull_request:
-    branches: [ new-branch-name ]
+    branches: new-branch-name
 
 jobs:
   build:
