--- a/.github/cy.yml
+++ b/.github/cy.yml
@@ -2,9 +2,11 @@ name: Node.js CI
 
 on:
   push:
-    branches: new-branch-name
+    branches:
+      - master
   pull_request:
-    branches: new-branch-name
+    branches:
+      - master
 
 jobs:
   build:
